--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A native development UI for ViewComponent",
   "type": "module",
   "scripts": {
-    "clean": "rm -rf ./public/lookbook-assets && rm -rf ./public/lookbook-assets",
-    "watch": "npm run clean && npm run dev:shoelace && concurrently \"npm:watch:css\" \"npm:watch:js\"",
+    "clean": "rm -rf ./public/lookbook-assets",
+    "watch": "npm run clean && npm run build:shoelace && concurrently \"npm:watch:css\" \"npm:watch:js\"",
     "build": "npm run clean && npm run build:shoelace && npm run build:css && npm run build:js",
     "build:shoelace": "copyfiles -u 5 ./node_modules/@shoelace-style/shoelace/dist/assets/**/* ./public/lookbook-assets/shoelace/assets",
     "watch:css": "postcss ./assets/entrypoints/*.css -d ./public/lookbook-assets --watch",
