--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "clean": "rm -rf ./public/lookbook-assets",
     "copy-icons": "copyfiles -u 3 ./node_modules/lucide-static/icons/*.svg ./public/lookbook-assets/icons",
-    "watch": "npm run clean && npm run build:shoelace && concurrently \"npm:watch:css\" \"npm:watch:js\"",
-    "build": "npm run clean && npm run build:shoelace && npm run build:css && npm run build:js",
+    "watch": "npm run clean && npm run copy-icons && concurrently \"npm:watch:css\" \"npm:watch:js\"",
+    "build": "npm run clean && npm run copy-icons && npm run build:css && npm run build:js",
     "build:shoelace": "copyfiles -u 5 ./node_modules/@shoelace-style/shoelace/dist/assets/**/* ./public/lookbook-assets/shoelace/assets",
     "watch:css": "postcss ./assets/entrypoints/*.css -d ./public/lookbook-assets --watch",
     "build:css": "postcss ./assets/entrypoints/*.css -d ./public/lookbook-assets",
