--- a/docs/src/_data/config_options.yml
+++ b/docs/src/_data/config_options.yml
@@ -98,11 +98,11 @@ previews:
 
   - name: preview_disable_action_view_partial_prefixes
     types: Boolean
-    default: "false"
-    example: config.lookbook.preview_disable_action_view_partial_prefixes = true
+    default: "true"
+    example: config.lookbook.preview_disable_action_view_partial_prefixes = false
     description: |
       Turns off action view automatic partial namespace prefixing when generating rendered component source.
-      Enable this option to allow short syntax like `render @model` in your partials.
+      This option enables short-hand syntax (`render @model`) in your partials.
 
   - name: preview_sort_scenarios
     types: Boolean
