More embeds implementation work

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "alpinejs": "^3.13.5",
     "container-query-polyfill": "^1.0.2",
     "iframe-resizer": "^4.3.9",
+    "lit": "^3.1.3",
     "lucide-static": "^0.367.0",
     "prettier": "^3.2.5",
     "shiki": "^1.2.0",
