--- a/package.json
+++ b/package.json
@@ -19,13 +19,11 @@
   "dependencies": {
     "@alpinejs/morph": "^3.13.5",
     "@alpinejs/persist": "^3.13.5",
-    "@prettier/plugin-ruby": "^4.0.4",
     "alpinejs": "^3.13.5",
     "container-query-polyfill": "^1.0.2",
     "iframe-resizer": "^4.3.9",
     "lit": "^3.1.3",
     "lucide-static": "^0.367.0",
-    "prettier": "^3.2.5",
     "shiki": "^1.2.0",
     "split-grid": "^1.0.11",
     "tippy.js": "^6.3.7"
@@ -44,7 +42,8 @@
     "postcss-import": "^16.0.1",
     "postcss-import-ext-glob": "^2.1.1",
     "postcss-nesting": "^12.0.2",
-    "postcss-preset-env": "^9.5.2"
+    "postcss-preset-env": "^9.5.2",
+    "prettier": "^3.2.5"
   },
   "prettier": {
     "tabWidth": 2,
