--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "type": "module",
   "scripts": {
     "clean": "rm -rf ./public/lookbook-assets",
-    "copy-icons": "copyfiles -u 3 ./node_modules/lucide-static/icons/*.svg ./public/lookbook-assets/icons",
-    "watch": "npm run clean && npm run copy-icons && concurrently \"npm:watch:css\" \"npm:watch:js\"",
-    "build": "npm run clean && npm run copy-icons && npm run build:css && npm run build:js",
+    "copy:icons": "copyfiles -u 3 ./node_modules/lucide-static/icons/*.svg ./public/lookbook-assets/icons",
+    "copy:fonts": "copyfiles -u 2 ./assets/fonts/* ./public/lookbook-assets/fonts",
+    "copy": "npm run copy:icons && npm run copy:fonts",
+    "watch": "npm run clean && npm run copy && concurrently \"npm:watch:css\" \"npm:watch:js\"",
+    "build": "npm run clean && npm run copy && npm run build:css && npm run build:js",
     "watch:css": "postcss ./assets/entrypoints/*.css -d ./public/lookbook-assets --watch",
     "build:css": "postcss ./assets/entrypoints/*.css -d ./public/lookbook-assets",
     "watch:js": "node esbuild.config.js --watch",
