--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "alpinejs": "^3.13.10",
     "container-query-polyfill": "^1.0.2",
     "iframe-resizer": "^4.3.9",
+    "js-cookie": "^3.0.5",
     "lit": "^3.1.3",
     "lucide-static": "^0.367.0",
     "shiki": "^1.2.0",
