--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "lookbook",
   "version": "3.0.0.alpha.0",
+  "private": true,
   "description": "A native development UI for ViewComponent",
   "type": "module",
   "scripts": {
@@ -14,7 +15,9 @@
     "build:css": "postcss ./assets/entrypoints/*.css -d ./public/lookbook-assets",
     "watch:js": "node esbuild.config.js --watch",
     "build:js": "node esbuild.config.js",
-    "prepare": "husky"
+    "lint:fix": "bundle exec standardrb --fix && prettier --write .",
+    "prepare": "husky",
+    "release": "release-it"
   },
   "author": "Mark Perkins",
   "license": "MIT",
@@ -46,7 +49,8 @@
     "postcss-import-ext-glob": "^2.1.1",
     "postcss-nesting": "^12.0.2",
     "postcss-preset-env": "^9.5.2",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "release-it": "^17.3.0"
   },
   "prettier": {
     "tabWidth": 2,
