--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,20 +8,32 @@ on:
 
 jobs:
   test:
+    name: test (${{ matrix.rails_version }}, ${{ matrix.ruby_version }})
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        ruby: [3.0, 3.1, 3.2]
-        appraisal: ["rails-6.0", "rails-6.1", "rails-7.0", "rails-head"]
+        include:
+          - ruby_version: "3.0"
+            rails_version: "6.1"
+          - ruby_version: "3.1"
+            rails_version: "7.0"
+          - ruby_version: "3.2"
+            rails_version: "7.1"
+          - ruby_version: "3.3"
+            rails_version: "7.2"
+          - ruby_version: "3.3"
+            rails_version: "head"
+    env:
+      BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails_version }}.gemfile
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Ruby ${{ matrix.ruby }}
+      - name: Set up Ruby ${{ matrix.ruby_version }}
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: ${{ matrix.ruby }}
-          bundler-cache: false
+          ruby-version: ${{ matrix.ruby_version }}
+          bundler-cache: true
 
       - name: Set system gem command
         run: gem update --system
@@ -32,8 +44,10 @@ jobs:
       - name: Bundle for Appraisal
         run: bundle
 
-      - name: Install Appraisal dependencies
-        run: bundle exec appraisal ${{ matrix.appraisal }} bundle
-
-      - name: Run tests
-        run: bundle exec appraisal ${{ matrix.appraisal }} rspec
+      - name: Build and test
+        run: |
+          bundle exec appraisal rails-${{ matrix.rails_version }} bundle
+          bundle exec appraisal rails-${{ matrix.rails_version }} rspec
+        env:
+          RAILS_VERSION: ${{ matrix.rails_version }}
+          RUBY_VERSION: ${{ matrix.ruby_version }}
