--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
   "dependencies": {
     "@alpinejs/morph": "^3.14.0",
     "@alpinejs/persist": "^3.14.0",
+    "@iframe-resizer/child": "^5.3.3",
+    "@iframe-resizer/parent": "^5.3.3",
     "alpinejs": "^3.14.0",
     "container-query-polyfill": "^1.0.2",
-    "iframe-resizer": "^4.3.9",
     "js-cookie": "^3.0.5",
     "lit": "^3.1.3",
     "lucide-static": "^0.367.0",
