Separate Redcarpet's markdown extensions & options (fix with_toc_data not working)

--- a/config/app.yml
+++ b/config/app.yml
@@ -35,14 +35,16 @@ shared:
   page_extensions: [html.*, md.*]
   page_options: {}
 
-  markdown_options:
+  markdown_extensions:
     tables: true
     fenced_code_blocks: true
     disable_indented_code_blocks: true
     strikethrough: true
     highlight: true
-    with_toc_data: true
     lax_spacing: true
+
+  markdown_options:
+    with_toc_data: true
 
   highlighter_options:
     theme: github
