--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,7 @@ jobs:
         run: |
           bundle exec appraisal rails-${{ matrix.rails_version }} bundle
           bundle exec appraisal rails-${{ matrix.rails_version }} rspec
+          bundle exec appraisal rails-${{ matrix.rails_version }} rake test
         env:
           RAILS_VERSION: ${{ matrix.rails_version }}
           RUBY_VERSION: ${{ matrix.ruby_version }}
