--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,6 +1,7 @@
 source "https://rubygems.org"
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
+gem "csv"
 ####
 # Welcome to your project's Gemfile, used by Rubygems & Bundler.
 #
