Update iframe-resizer to v5.x

--- a/package.json
+++ b/package.json
@@ -56,13 +56,14 @@
     "@alpinejs/collapse": "^3.14.9",
     "@alpinejs/morph": "^3.14.9",
     "@alpinejs/persist": "^3.14.9",
+    "@iframe-resizer/child": "^5.5.7",
+    "@iframe-resizer/parent": "^5.5.7",
     "@rails/actioncable": "^6.1.4",
     "@ryangjchandler/alpine-tooltip": "^2.0.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.19",
     "alpinejs": "^3.14.9",
     "autoprefixer": "^10.4.21",
-    "iframe-resizer": "^4.3.2",
     "js-cookie": "^3.0.5",
     "loglevel": "^1.9.2",
     "loglevel-plugin-prefix": "^0.8.4",
@@ -84,7 +85,7 @@
     "eslint-plugin-import": "^2.29.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.5",
-    "parcel": "^2.13.3",
+    "parcel": "^2.16.0",
     "postcss": "^8.4.23",
     "postcss-import": "^16.1.0",
     "postcss-import-ext-glob": "^2.0.1",
