--- a/.standard.yml
+++ b/.standard.yml
@@ -1,5 +1,3 @@
-ruby_version: 2.7
+ruby_version: 3.2
 ignore:
-  - "spec/dummy/**/*"
-  - "spec/fixtures/**/*"
-  - "**/*/puma.rb"
+  - "test/dummy/**/*"
