--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lookbook",
-  "version": "2.3.13",
+  "version": "4.0.0-pre.0",
   "description": "A UI development environment for Ruby on Rails applications",
   "private": true,
   "type": "module",
