--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [main, v2]
+    # branches: [main, v4-wip]
   pull_request:
-    branches: ["**"]
+    # branches: ["**"]
 
 jobs:
   test:
@@ -14,18 +14,17 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - ruby_version: "3.0"
-            rails_version: "6.1"
-          - ruby_version: "3.1"
-            rails_version: "7.0"
           - ruby_version: "3.2"
-            rails_version: "7.1"
-          - ruby_version: "3.3"
             rails_version: "7.2"
           - ruby_version: "3.3"
             rails_version: "8.0"
           - ruby_version: "3.4"
             rails_version: "8.0"
+          - ruby_version: "3.4"
+            rails_version: "8.1"
+          - ruby_version: "3.4"
+            rails_version: "rails-head"
+
     env:
       BUNDLE_GEMFILE: gemfiles/rails_${{ matrix.rails_version }}.gemfile
     steps:
@@ -49,7 +48,7 @@ jobs:
       - name: Build and test
         run: |
           bundle exec appraisal rails-${{ matrix.rails_version }} bundle
-          bundle exec appraisal rails-${{ matrix.rails_version }} rspec
+          bundle exec appraisal rails-${{ matrix.rails_version }} rake test
         env:
           RAILS_VERSION: ${{ matrix.rails_version }}
           RUBY_VERSION: ${{ matrix.ruby_version }}
